# JDS6600

./: .flake8  LICENSE  README.md  VERSION.txt  mypy.ini  pyproject.toml  requirements.dev.txt  setup.py
.github/workflows/: release.yml  test_and_lint.yml  testing.yml
src/jds6600/: __init__.py  cli.py  core.py  jds6600.py
tests/: test_cli.py  test_jds6600.py  test_main.py
