[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JDS6600"
version = "0.0.1dev0"
authors = [
  { name="Wim De Hul", email="wim@dehul.net" },
]
description = "A Python package form the JDS6600 DDSS Signal Generator/Counter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/WimDH/JDS6600"
"Bug Tracker" = "https://github.com/WimDH/JDS6600/issues"