[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "jds6600"
version = "0.0.1.dev0"
authors = [
  { name="Wim De Hul", email="wim@dehul.net" },
]
description = "A Python package form the JDS6600 DDS Signal Generator/Counter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyserial==3.5",
]

[project.optional-dependencies]
test = [
    "pytest==7.1.3",
    "mypy==0.982",
    "black==22.10.0",
    "flake8==5.0.4",
    "build==0.8.0",
]

[project.urls]
"Homepage" = "https://github.com/WimDH/JDS6600"
"Bug Tracker" = "https://github.com/WimDH/JDS6600/issues"
